@@ -630,10 +630,11 @@ def _deferred_relation(cls, prop):
             if isinstance(v, basestring):
                 setattr(prop, attr, resolve_arg(v))
 
-        if prop.backref:
+        if prop.backref and isinstance(prop.backref, tuple):
+            key, kwargs = prop.backref
             for attr in ('primaryjoin', 'secondaryjoin', 'secondary', 'foreign_keys', 'remote_side', 'order_by'):
-               if attr in prop.backref.kwargs and isinstance(prop.backref.kwargs[attr], basestring):
-                   prop.backref.kwargs[attr] = resolve_arg(prop.backref.kwargs[attr])
+               if attr in kwargs and isinstance(kwargs[attr], basestring):
+                   kwargs[attr] = resolve_arg(kwargs[attr])
 
 
     return prop
